2017-06-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_wakeup): Fix for RUNNING==NULL.

	* mcu/usb-mkl27z.c (std_get_status): Use staic var, not auto.

2017-05-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_wakeup): Fix access to REG_R0.

2017-02-02  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.3.
	* doc/chopstx.texi (VERSION): 1.3.

2017-02-01  Paul Fertser <fercerpav@gmail.com>

	* board/board-blue-pill.h: New.

2016-12-08  Szczepan Zalega <szczepan@nitrokey.com>

	* board/board-nitrokey-start.h (VAL_GPIO_USB_ODR): Switch off red
	LED for Nitrokey Start.

2016-10-13  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.
	* doc/chopstx.texi (VERSION): 1.2.

2016-10-12  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_join, chopstx_cancel): chopstx_join is
	cancellation point.

2016-07-11  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/stm32f103.h: Add more from Gnuk 1.1.9.
	* example-cdc, example-fs-bb48, example-fsm-55, example-led:
	Update for stack addr/size.

2016-07-01  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.
	* doc/chopstx.texi (VERSION): 1.1.

	* chopstx.c (chopstx_setpriority): Change the API.

2016-06-30  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c (tty_recv, tty_main): Follow the change of
	chopstx_poll.

2016-06-29  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fs-bb48: Update.
	* example-fs-bb48/touch.c: New.

	* chopstx.c (chopstx_setpriority): Fix sched_lock/unlock.

2016-06-28  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (struct chx_poll_head): Declare here.

	* chopstx.c (chopstx_poll): Don't use varargs, but use
	an array of pointer.
	(chopstx_intr_wait): Follow the change of chopstx_poll.
	* eventflag.c (eventflag_wait_timeout): Likewise.
	* contrib/adc-stm32f103.c (adc_wait_completion): Likewise.
	* contrib/adc-mkl27z.c (adc_wait_completion): Likewise.

2016-06-16  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.
	* doc/chopstx.texi (VERSION): 1.0.

	* board/board-fst-01g.h: New.
